--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,11 @@
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
-    <h1>Este es el blog-post</h1>
-    <p>Este es el inicio de párrafo</p>
+    <div id="container">
+        <div id="post">
+            <h1>Título: Ramas o branches en Git. </h1>
+            <p>Las ramas son la forma de hacer cambios en nuestro proyecto sin afectar el flujo de trabajo de la rama principal. Esto porque queremos trabajar una parte muy específica de la aplicación o simplemente experimentar.</p>
+        </div>
+    </div>
 </body>
 </html>
