se actualizó blog

--- a/blogpost.html
+++ b/blogpost.html
@@ -17,5 +17,5 @@
             <p>Las ramas son la forma de hacer cambios en nuestro proyecto sin afectar el flujo de trabajo de la rama principal. Esto porque queremos trabajar una parte muy específica de la aplicación o simplemente experimentar.</p>
         </div>
     </div>
-</body>x    
+</body>    
 </html>
