--- a/blogpost.html
+++ b/blogpost.html
@@ -10,7 +10,7 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            CABECERA-LOGO <span id="tagline">Tu blog de cabecera</span>
+            Hyperblog <span id="tagline">Tu blog de cabecera</span>
         </div>
         <div id="post">
             <h1>Título: Ramas o branches en Git. </h1>
