--- a/blogpost.html
+++ b/blogpost.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Bienvenido a HB2.0</title>
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
     <div id="container">
         <div id="cabecera">
-            Hyperblog <span id="tagline">Tu blog de cabecera</span>
+            Hyperblog 2.0<span id="tagline">Tu blog de cabecera</span>
         </div>
         <div id="post">
             <h1>Título: Ramas o branches en Git. </h1>
