Cambios en color de fondo, nuevo logo, y cambio color header

--- a/blogpost.html
+++ b/blogpost.html
@@ -10,7 +10,9 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            Hyperblog 2.0<span id="tagline">Tu blog de cabecera</span>
+            <img id="logo" src="img/animalia_curvas.png" alt="logo-hp" /> 
+            Hyperblog 2.0            
+            <span id="tagline">Tu blog de cabecera</span>
         </div>
         <div id="post">
             <h1>Título: Ramas o branches en Git. </h1>
