Cabecera, footer, terminada

--- a/blogpost.html
+++ b/blogpost.html
@@ -18,6 +18,8 @@
             <p>El comando git merge nos permite crear un nuevo commit con la combinación de dos ramas (la rama donde nos encontramos cuando ejecutamos el comando y la rama que indiquemos después del comando).</p>
             <p>Suscríbete y dale like</p>
         </div>
+        <footer id="footer">Hecho con amor</footer>
     </div>
+    
 </body>    
 </html>
