Cambio a entidades HTML en vez de tildes

--- a/blogpost.html
+++ b/blogpost.html
@@ -15,10 +15,10 @@
             <span id="tagline">Tu blog de cabecera</span>
         </div>
         <div id="post">
-            <h1>Título: Ramas o branches en Git. </h1>
+            <h1>T&iacute;tulo: Ramas o branches en Git. </h1>
             <p>Las ramas son la forma de hacer cambios en nuestro proyecto sin afectar el flujo de trabajo de la rama principal. Esto porque queremos trabajar una parte muy específica de la aplicación o simplemente experimentar.</p>
             <p>El comando <span style="font-weight: bold;">git merge</span> nos permite crear un nuevo commit con la combinación de dos ramas (la rama donde nos encontramos cuando ejecutamos el comando y la rama que indiquemos después del comando).</p>
-            <p>Suscríbete</p>
+            <p>Suscr&iacute;bete</p>
         </div>
         <footer id="footer">Hecho con amor</footer>
     </div>
